# FrameTimingSim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
FrameSinks/: FrameRate.hpp  FrameSink.hpp  NetworkDrops.hpp
FrameTimingSim.xcodeproj/: project.pbxproj
FrameTimingSim.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FrameTimingSim.xcodeproj/xcshareddata/xcschemes/: FrameTimingSim.xcscheme
data/: frame_timing.csv
